# titanoboa

./: .gitignore  project.clj  pyproject.toml  requirements.txt
boa/: interpret.py
boa/contracts/solidity/: __init__.py
boa/vyper/: decoder_utils.py
doc/: intro.md
src/titanoboa/: core.clj
test/titanoboa/: core_test.clj
tests/: sim_veYFI.hy
