[project]
name = "titanoboa"
version = "0.1.2"
description = "Experimental Vyper interpreter"
#authors = []
license = { file = "LICENSE" }
readme = "README.md"
#homepage = "https://github.com/vyperlang/titanoboa"
#repository = "https://github.com/vyperlang/titanoboa"
#documentation =

keywords = ["ethereum", "evm", "smart contract", "development"]

classifiers = ["Topic :: Software Development"]

# Requirements
dependencies = [
    "vyper @ git+https://github.com/vyperlang/vyper@c27f2257cecdc5ba7d89ba7525f580073b84a921",
    "hy @ git+https://github.com/hylang/hy.git@e375827a3603e33761810495a4b15a981178dc75 ",
    "eth-abi",
    "py-evm",
    "eth-typing",
]


[tool.setuptools]
packages = ["boa"]

#[dev-dependencies]
#black = { version = "^18.3-alpha.0", python = "^3.6" }

